[gd_scene load_steps=6 format=3 uid="uid://c1pavth0w8myu"]

[ext_resource type="PackedScene" uid="uid://41hqgysc36h6" path="res://scenes/Background.tscn" id="1_hdqoa"]
[ext_resource type="Script" path="res://scripts/World.gd" id="1_mtpma"]
[ext_resource type="PackedScene" uid="uid://bbqit8s8s6g7j" path="res://scenes/alien_small.tscn" id="2_opbhc"]
[ext_resource type="PackedScene" uid="uid://b2uwdye45affq" path="res://scenes/SpaceShip.tscn" id="2_sqiei"]
[ext_resource type="PackedScene" uid="uid://tb7q1rariqng" path="res://scenes/LaserShot.tscn" id="3_jm5aj"]

[node name="root" type="Node2D"]
script = ExtResource("1_mtpma")
alien_scene = ExtResource("2_opbhc")

[node name="Space" parent="." instance=ExtResource("1_hdqoa")]

[node name="SpaceShip" parent="." instance=ExtResource("2_sqiei")]
position = Vector2(350, 1164)
projectile = ExtResource("3_jm5aj")

[node name="AlienSpawn" type="Marker2D" parent="."]
position = Vector2(131, 249)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.316
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
